--- a/src/program/Cargo.toml
+++ b/src/program/Cargo.toml
@@ -6,11 +6,11 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-solana-program = "1.9.9"
-
+getrandom = { version = "0.2.7", features = ["custom"] }
+solana-program = "1.14.3"
 [dev-dependencies]
-solana-program-test = "1.9.9"
-solana-sdk = "1.9.9"
-
+solana-sdk = "1.14.3"
+solana-program-test = "1.14.3"
 [lib]
 crate-type = ["cdylib", "lib"]
+
